[gd_scene load_steps=9 format=2]

[ext_resource path="res://Assets/Font/PaytoneOne-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Assets/Interface/Artboard 10 copy 2.png" type="Texture" id=3]
[ext_resource path="res://Assets/Interface/Artboard 10 copy 3.png" type="Texture" id=4]
[ext_resource path="res://Src/Scripts/PopUp.gd" type="Script" id=5]

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 14
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 1 )

[node name="PopUp" type="Control"]
script = ExtResource( 5 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1022.0
margin_bottom = 572.0
color = Color( 0.0941176, 0.290196, 0.12549, 0.803922 )

[node name="ColorRect" type="ColorRect" parent="ColorRect"]
margin_left = 16.0
margin_top = 14.0
margin_right = 1009.0
margin_bottom = 554.0
color = Color( 0.105882, 0.270588, 0.129412, 0.72549 )

[node name="itemsRequiredList" type="HBoxContainer" parent="ColorRect"]
margin_left = 107.0
margin_top = 201.0
margin_right = 868.0
margin_bottom = 268.0
custom_constants/separation = 84
alignment = 1

[node name="Task" type="Label" parent="ColorRect"]
margin_left = 457.0
margin_top = 62.0
margin_right = 552.0
margin_bottom = 108.0
custom_fonts/font = SubResource( 1 )
text = "TASK"

[node name="Label8" type="Label" parent="ColorRect"]
margin_left = 417.0
margin_top = 163.0
margin_right = 605.0
margin_bottom = 187.0
custom_fonts/font = SubResource( 2 )
text = "Buy the following item/s"

[node name="Label3" type="Label" parent="ColorRect"]
margin_left = 410.0
margin_top = 305.0
margin_right = 536.0
margin_bottom = 329.0
custom_fonts/font = SubResource( 2 )
text = "Money available:"

[node name="Label4" type="Label" parent="ColorRect"]
margin_left = 543.0
margin_top = 305.0
margin_right = 627.0
margin_bottom = 329.0
custom_colors/font_color = Color( 0.823529, 0.756863, 0.309804, 1 )
custom_fonts/font = SubResource( 2 )
text = "200$"

[node name="Label5" type="Label" parent="ColorRect"]
margin_left = 456.0
margin_top = 335.0
margin_right = 582.0
margin_bottom = 359.0
custom_fonts/font = SubResource( 2 )
text = "Time:"

[node name="Label6" type="Label" parent="ColorRect"]
margin_left = 503.0
margin_top = 335.0
margin_right = 587.0
margin_bottom = 359.0
custom_colors/font_color = Color( 0.823529, 0.756863, 0.309804, 1 )
custom_fonts/font = SubResource( 2 )
text = "2:00"

[node name="Label7" type="Label" parent="ColorRect"]
margin_left = 339.0
margin_top = 395.0
margin_right = 668.0
margin_bottom = 419.0
custom_fonts/font = SubResource( 2 )
text = "Don't run out of money or lose all your energy!"

[node name="BeginButton" type="TextureButton" parent="ColorRect"]
margin_left = 400.0
margin_top = 467.0
margin_right = 587.0
margin_bottom = 502.0
rect_scale = Vector2( 1.1, 1.1 )
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 4 )

[node name="Label" type="Label" parent="ColorRect/BeginButton"]
margin_left = 65.0
margin_top = 3.00003
margin_right = 113.0
margin_bottom = 26.0
custom_fonts/font = SubResource( 3 )
text = "Begin"

[node name="Back to Menu" type="TextureButton" parent="ColorRect"]
margin_left = 41.0
margin_top = 36.0
margin_right = 228.0
margin_bottom = 69.0
rect_scale = Vector2( 0.5, 1 )
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 4 )

[node name="Label" type="Label" parent="ColorRect"]
margin_left = 65.0
margin_top = 39.0
margin_right = 154.0
margin_bottom = 62.0
custom_fonts/font = SubResource( 4 )
text = "Back"

[connection signal="pressed" from="ColorRect/BeginButton" to="." method="_on_play_pressed"]
[connection signal="pressed" from="ColorRect/Back to Menu" to="." method="_on_backtomenu_pressed"]
